[Split Lines] Related to issue 30845: Removed extra spaces from comments and css code

--- a/web/org.openbravo.retail.posterminal/css/obpos-main.css
+++ b/web/org.openbravo.retail.posterminal/css/obpos-main.css
@@ -68,27 +68,27 @@
 }
 
 .splitline-number-edit {
-  width: 30px; 
+  width: 30px;
   height: 23px;
 }
 
 .splitline-line-label {
-  float: left; 
-  width: 50%;  
-  background-color: #e2e2e2; 
-  height: 35px; 
-  padding-right: 5px; 
+  float: left;
+  width: 50%;
+  background-color: #e2e2e2;
+  height: 35px;
+  padding-right: 5px;
   text-align: right;
-  font-size: 16px; 
-  color: black
+  font-size: 16px;
+  color: black;
 }
 
 .splitline-line-editors {
-  float: left; 
-  width: 40%; 
-  text-align: left; 
-  padding-left: 5px;	
-}          
+  float: left;
+  width: 40%;
+  text-align: left;
+  padding-left: 5px;
+}
 
 .splitline-numbereditor-minusbtn {
   border: 1px solid #E2E2E2 !important;
@@ -101,9 +101,9 @@
 }
 
 .splitline-info {
-  background-color: #fff; 
-  height: 32px; 
-  color: black; 
+  background-color: #fff;
+  height: 32px;
+  color: black;
   font-size: 16px;
 }
 
@@ -116,21 +116,21 @@
 }
 
 .splitline-info-label {
-  width: 25%; 
-  float: left; 
-  background-color: #e2e2e2; 
+  width: 25%;
+  float: left;
+  background-color: #e2e2e2;
   border: 1px solid #fff;
   vertical-align: middle;
 }
 
 .splitline-info-label-difference {
-  width: calc(25% - 12px); 
+  width: calc(25% - 12px);
 }
 
 .splitline-info-editor {
-  width: 25%; 
-  float: left; 
-  background-color: #fff; 
+  width: 25%;
+  float: left;
+  background-color: #fff;
   text-align: center
 }
 
@@ -156,19 +156,19 @@
     height: 45px;
   }
   .splitline-line-label {
-    width: 35%;  
-	height: 53px; 
+    width: 35%;
+    height: 53px;
   }
   .splitline-line-editors {
-    width: 59%;  
+    width: 59%;
   }
   .splitline-info {
-    height: 60px; 
+    height: 60px;
   }
   .splitline-info-label {
-    width: 33%; 
+    width: 33%;
     height: 58px;
-  } 
+  }
   .splitline-info-label-difference {
     width: calc(33% - 4px);
     height: 58px;
@@ -177,7 +177,7 @@
     display: none;
   }
   .splitline-info-editor {
-    width: 33%;  
+    width: 33%;
   }
   .splitline-lines-number-hide {
     display: block;
